# RayTracer

./: CMakeLists.txt  main.cpp
src/GeometricObjects/: geometric_object.cpp  geometric_object.h  sphere.cpp  sphere.h
src/Tracers/: single_sphere.cpp  single_sphere.h  tracer.cpp  tracer.h
src/Utilities/: color.cpp  color.h  constants.h  maths.h  matrix.cpp  matrix.h  normal.cpp  normal.h  point3.cpp  point3.h  ray.h  shade_rec.cpp  shade_rec.h  vector3.cpp  vector3.h
src/World/: build_function.cpp  view_plane.cpp  view_plane.h  world.cpp  world.h
